feat: fill index.html (SAT, 11 March 2023, 19.02

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -12,7 +12,71 @@
     <title>cssBayan</title>
 </head>
 <body>
-    
+    <header class="header" id="header">CSS Bayan</header>
+    <main class="main" id="main">
+        <div class="block-mems mems">
+            <div class="mems-item item">
+                <div class="item-top">
+                    <h2 class="subtitle">From work only horses die</h2>
+                    <img class="plus">
+                    <img class="xmark">
+                </div>
+                <div class="item-bottom">
+                    <img class="img-mem" src="./assets/img/From work only horses die.jpg">
+                </div>
+            </div>
+            <div class="mems-item item">
+                <div class="item-top">
+                    <h2 class="subtitle">Keep calm and carry on</h2>
+                    <img class="plus">
+                    <img class="xmark">
+                </div>
+                <div class="item-bottom">
+                    <img class="img-mem" src="./assets/img/Keep calm and carry on.jpg">
+                </div>
+            </div>
+            <div class="mems-item item">
+                <div class="item-top">
+                    <h2 class="subtitle">Relax and take it easy</h2>
+                    <img class="plus">
+                    <img class="xmark">
+                </div>
+                <div class="item-bottom">
+                    <img class="img-mem" src="./assets/img/Relax and take it easy.jpg">
+                </div>
+            </div>
+            <div class="mems-item item">
+                <div class="item-top">
+                    <h2 class="subtitle">Were is JavaScript</h2>
+                    <img class="plus">
+                    <img class="xmark">
+                </div>
+                <div class="item-bottom">
+                    <img class="img-mem" src="./assets/img/Were is JavaScript.jpg">
+                </div>
+            </div>
+            <div class="mems-item item">
+                <div class="item-top">
+                    <h2 class="subtitle">Work-life balance</h2>
+                    <img class="plus">
+                    <img class="xmark">
+                </div>
+                <div class="item-bottom">
+                    <img class="img-mem" src="./assets/img/Work-life balance.jpg">
+                </div>
+            </div>
+            <div class="mems-item item">
+                <div class="item-top">
+                    <h2 class="subtitle">You can`t just copy and paste</h2>
+                    <img class="plus">
+                    <img class="xmark">
+                </div>
+                <div class="item-bottom">
+                    <img class="img-mem" src="./assets/img/You can`t just copy and paste.jpg">
+                </div>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
