--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header" id="header">
-        <div class="header header-container">
+        <div class="header-container container">
             <h1 class="header-title">CSS Bayan</h1>
         </div>
     </header>
