fix: add div class=plus-cross. (SAT, 11 March 2023, 21.42)

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -23,61 +23,73 @@
                 <div class="mems-item item">
                     <div class="item-top">
                         <h2 class="subtitle">From work only horses die</h2>
-                        <img class="plus">
-                        <img class="xmark">
+                        <div class="plus-cross">
+                            <img class="plus">
+                            <img class="xmark">
+                        </div>
                     </div>
                     <div class="item-bottom">
-                        <img class="img-mem" src="./assets/img/From work only horses die.jpg">
+                        <img class="img-mem" src="./assets/img/FromWork.jpg">
                     </div>
                 </div>
                 <div class="mems-item item">
                     <div class="item-top">
                         <h2 class="subtitle">Keep calm and carry on</h2>
-                        <img class="plus">
-                        <img class="xmark">
+                        <div class="plus-cross">
+                            <img class="plus">
+                            <img class="xmark">
+                        </div>
                     </div>
                     <div class="item-bottom">
-                        <img class="img-mem" src="./assets/img/Keep calm and carry on.jpg">
+                        <img class="img-mem" src="./assets/img/KeepCalm.jpg">
                     </div>
                 </div>
                 <div class="mems-item item">
                     <div class="item-top">
                         <h2 class="subtitle">Relax and take it easy</h2>
-                        <img class="plus">
-                        <img class="xmark">
+                        <div class="plus-cross">
+                            <img class="plus">
+                            <img class="xmark">
+                        </div>
                     </div>
                     <div class="item-bottom">
-                        <img class="img-mem" src="./assets/img/Relax and take it easy.jpg">
+                        <img class="img-mem" src="./assets/img/Relax.jpg">
                     </div>
                 </div>
                 <div class="mems-item item">
                     <div class="item-top">
                         <h2 class="subtitle">Were is JavaScript</h2>
-                        <img class="plus">
-                        <img class="xmark">
+                        <div class="plus-cross">
+                            <img class="plus">
+                            <img class="xmark">
+                        </div>
                     </div>
                     <div class="item-bottom">
-                        <img class="img-mem" src="./assets/img/Were is JavaScript.jpg">
+                        <img class="img-mem" src="./assets/img/WereIs.jpg">
                     </div>
                 </div>
                 <div class="mems-item item">
                     <div class="item-top">
                         <h2 class="subtitle">Work-life balance</h2>
-                        <img class="plus">
-                        <img class="xmark">
+                        <div class="plus-cross">
+                            <img class="plus">
+                            <img class="xmark">
+                        </div>
                     </div>
                     <div class="item-bottom">
-                        <img class="img-mem" src="./assets/img/Work-life balance.jpg">
+                        <img class="img-mem" src="./assets/img/WorkLife.jpg">
                     </div>
                 </div>
                 <div class="mems-item item">
                     <div class="item-top">
                         <h2 class="subtitle">You can`t just copy and paste</h2>
-                        <img class="plus">
-                        <img class="xmark">
+                        <div class="plus-cross">
+                            <img class="plus">
+                            <img class="xmark">
+                        </div>
                     </div>
                     <div class="item-bottom">
-                        <img class="img-mem" src="./assets/img/You can`t just copy and paste.jpg">
+                        <img class="img-mem" src="./assets/img/CopyPaste.jpg">
                     </div>
                 </div>
             </div>
