feat: add style to main, (SAT, 11 March 2023, 22.16)

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="item-bottom">
-                        <img class="img-mem" src="./assets/img/FromWork.jpg">
+                        <img class="img-mem img" src="./assets/img/FromWork.jpg">
                     </div>
                 </div>
                 <div class="mems-item item">
