fix: remane some classesin div class mems-item, (SAT, 12 March 2023, 11.25)

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -20,81 +20,56 @@
     <main class="main" id="main">
         <div class="main-container container">
             <div class="block-mems mems">
-                <div class="mems-item item">
+                <div class="mems-item">
                     <div class="item-top">
                         <h2 class="subtitle">From work only horses die</h2>
-                        <div class="plus-cross">
-                            <img class="plus">
-                            <img class="xmark">
-                        </div>
-                    </div>
-                    <div class="item-bottom">
                         <img class="img-mem img" src="./assets/img/FromWork.jpg">
                     </div>
+                    <img class="plus">
+                    <img class="xmark">
                 </div>
-                <div class="mems-item item">
+                <div class="mems-item">
                     <div class="item-top">
                         <h2 class="subtitle">Keep calm and carry on</h2>
-                        <div class="plus-cross">
-                            <img class="plus">
-                            <img class="xmark">
-                        </div>
-                    </div>
-                    <div class="item-bottom">
                         <img class="img-mem" src="./assets/img/KeepCalm.jpg">
                     </div>
+                    <img class="plus">
+                    <img class="xmark">
                 </div>
-                <div class="mems-item item">
+                <div class="mems-item">
                     <div class="item-top">
                         <h2 class="subtitle">Relax and take it easy</h2>
-                        <div class="plus-cross">
-                            <img class="plus">
-                            <img class="xmark">
-                        </div>
-                    </div>
-                    <div class="item-bottom">
                         <img class="img-mem" src="./assets/img/Relax.jpg">
                     </div>
+                    <img class="plus">
+                    <img class="xmark">
                 </div>
-                <div class="mems-item item">
+                <div class="mems-item">
                     <div class="item-top">
                         <h2 class="subtitle">Were is JavaScript</h2>
-                        <div class="plus-cross">
-                            <img class="plus">
-                            <img class="xmark">
-                        </div>
-                    </div>
-                    <div class="item-bottom">
                         <img class="img-mem" src="./assets/img/WereIs.jpg">
                     </div>
+                    <img class="plus">
+                    <img class="xmark">
                 </div>
-                <div class="mems-item item">
+                <div class="mems-item">
                     <div class="item-top">
                         <h2 class="subtitle">Work-life balance</h2>
-                        <div class="plus-cross">
-                            <img class="plus">
-                            <img class="xmark">
-                        </div>
-                    </div>
-                    <div class="item-bottom">
                         <img class="img-mem" src="./assets/img/WorkLife.jpg">
                     </div>
+                    <img class="plus">
+                    <img class="xmark">
                 </div>
-                <div class="mems-item item">
+                <div class="mems-item">
                     <div class="item-top">
                         <h2 class="subtitle">You can`t just copy and paste</h2>
-                        <div class="plus-cross">
-                            <img class="plus">
-                            <img class="xmark">
-                        </div>
-                    </div>
-                    <div class="item-bottom">
                         <img class="img-mem" src="./assets/img/CopyPaste.jpg">
                     </div>
+                    <img class="plus">
+                    <img class="xmark">
                 </div>
             </div>
         </div>
     </main>
-    
 </body>
 </html>
