fix: correct name of tags and classes, (SAT, 12 March 2023, 13.56)

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -22,7 +22,9 @@
             <div class="block-mems mems">
                 <div class="mems-item">
                     <div class="item-top">
-                        <h2 class="subtitle">From work only horses die</h2>
+                        <input type="radio" name="radio-btn" id="subtitle" class="item-top" checked>
+                        <!-- <h2 class="subtitle">From work only horses die</h2> -->
+                        <label class="subtitle" for="subtitle">From work only horses die</label>
                         <img class="img-mem img" src="./assets/img/FromWork.jpg">
                     </div>
                     <img class="plus">
@@ -30,7 +32,8 @@
                 </div>
                 <div class="mems-item">
                     <div class="item-top">
-                        <h2 class="subtitle">Keep calm and carry on</h2>
+                        <input type="radio" name="radio-btn" id="subtitle" class="item-top">
+                        <label class="subtitle" for="subtitle">Keep calm and carry on</label>
                         <img class="img-mem" src="./assets/img/KeepCalm.jpg">
                     </div>
                     <img class="plus">
@@ -38,15 +41,19 @@
                 </div>
                 <div class="mems-item">
                     <div class="item-top">
-                        <h2 class="subtitle">Relax and take it easy</h2>
+                        <input type="radio" name="radio-btn" id="subtitle" class="item-top">
+                        <label class="subtitle" for="subtitle">Relax and take it easy</label>
                         <img class="img-mem" src="./assets/img/Relax.jpg">
                     </div>
+                    <!-- <input type="radio" name="radio-btn" id="subtitle" class="item-top" checked> -->
                     <img class="plus">
                     <img class="xmark">
+
                 </div>
                 <div class="mems-item">
                     <div class="item-top">
-                        <h2 class="subtitle">Were is JavaScript</h2>
+                        <input type="radio" name="radio-btn" id="subtitle" class="item-top">
+                        <label class="subtitle" for="subtitle">Were is JavaScript</label>
                         <img class="img-mem" src="./assets/img/WereIs.jpg">
                     </div>
                     <img class="plus">
@@ -54,7 +61,8 @@
                 </div>
                 <div class="mems-item">
                     <div class="item-top">
-                        <h2 class="subtitle">Work-life balance</h2>
+                        <input type="radio" name="radio-btn" id="subtitle" class="item-top">
+                        <label class="subtitle" for="subtitle">Work-life balance</label>
                         <img class="img-mem" src="./assets/img/WorkLife.jpg">
                     </div>
                     <img class="plus">
@@ -62,7 +70,8 @@
                 </div>
                 <div class="mems-item">
                     <div class="item-top">
-                        <h2 class="subtitle">You can`t just copy and paste</h2>
+                        <input type="radio" name="radio-btn" id="subtitle" class="item-top">
+                        <label class="subtitle" for="subtitle">You can`t just copy and paste</label>
                         <img class="img-mem" src="./assets/img/CopyPaste.jpg">
                     </div>
                     <img class="plus">
