--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -22,60 +22,63 @@
             <div class="block-mems mems">
                 <div class="mems-item">
                     <div class="item-top">
-                        <input type="radio" name="radio-btn" id="subtitle" class="item-top" checked>
+                        <!-- <input type="radio" name="radio-btn" id="subtitle" class="item-top" checked> -->
                         <!-- <h2 class="subtitle">From work only horses die</h2> -->
-                        <label class="subtitle" for="subtitle">From work only horses die</label>
-                        <img class="img-mem img" src="./assets/img/FromWork.jpg">
+                        <label class="subtitle" for="subtitle1">From work only horses die</label>
+                        <img class="plus">
+                        <img class="xmark">
+                        <!-- <img class="img-mem img" src="./assets/img/FromWork.jpg"> -->
                     </div>
-                    <img class="plus">
-                    <img class="xmark">
+                    <input type="radio" name="radio-btn" id="subtitle1" class="item-top" checked>
+                    <img class="img-mem img" src="./assets/img/FromWork.jpg">
+                    <!-- <img class="plus">
+                    <img class="xmark"> -->
                 </div>
                 <div class="mems-item">
                     <div class="item-top">
-                        <input type="radio" name="radio-btn" id="subtitle" class="item-top">
-                        <label class="subtitle" for="subtitle">Keep calm and carry on</label>
-                        <img class="img-mem" src="./assets/img/KeepCalm.jpg">
+                        <label class="subtitle" for="subtitle2">Keep calm and carry on</label>
+                        <img class="plus">
+                        <img class="xmark">
                     </div>
-                    <img class="plus">
-                    <img class="xmark">
+                    <input type="radio" name="radio-btn" id="subtitle2" class="item-top">
+                    <img class="img-mem" src="./assets/img/KeepCalm.jpg">
                 </div>
                 <div class="mems-item">
                     <div class="item-top">
-                        <input type="radio" name="radio-btn" id="subtitle" class="item-top">
-                        <label class="subtitle" for="subtitle">Relax and take it easy</label>
-                        <img class="img-mem" src="./assets/img/Relax.jpg">
+                        <label class="subtitle" for="subtitle3">Relax and take it easy</label>
+                        <img class="plus">
+                        <img class="xmark">
                     </div>
-                    <!-- <input type="radio" name="radio-btn" id="subtitle" class="item-top" checked> -->
-                    <img class="plus">
-                    <img class="xmark">
+                    <input type="radio" name="radio-btn" id="subtitle3" class="item-top">
+                    <img class="img-mem" src="./assets/img/Relax.jpg">
+                </div>
+                <div class="mems-item">
+                    <div class="item-top">
+                        <label class="subtitle" for="subtitle4">Were is JavaScript</label>
+                        <img class="plus">
+                        <img class="xmark">
+                    </div>
+                    <input type="radio" name="radio-btn" id="subtitle4" class="item-top">
+                    <img class="img-mem" src="./assets/img/WereIs.jpg">
+                </div>
+                <div class="mems-item">
+                    <div class="item-top">
+                        <label class="subtitle" for="subtitle5">Work-life balance</label>
+                        <img class="plus">
+                        <img class="xmark">
+                    </div>
+                    <input type="radio" name="radio-btn" id="subtitle5" class="item-top">
+                    <img class="img-mem" src="./assets/img/WorkLife.jpg">
+                </div>
+                <div class="mems-item">
+                    <div class="item-top">
+                        <label class="subtitle" for="subtitle6">You can`t just copy and paste</label>
+                        <img class="plus">
+                        <img class="xmark">
+                    </div>
+                    <input type="radio" name="radio-btn" id="subtitle6" class="item-top">
+                    <img class="img-mem" src="./assets/img/CopyPaste.jpg">
 
-                </div>
-                <div class="mems-item">
-                    <div class="item-top">
-                        <input type="radio" name="radio-btn" id="subtitle" class="item-top">
-                        <label class="subtitle" for="subtitle">Were is JavaScript</label>
-                        <img class="img-mem" src="./assets/img/WereIs.jpg">
-                    </div>
-                    <img class="plus">
-                    <img class="xmark">
-                </div>
-                <div class="mems-item">
-                    <div class="item-top">
-                        <input type="radio" name="radio-btn" id="subtitle" class="item-top">
-                        <label class="subtitle" for="subtitle">Work-life balance</label>
-                        <img class="img-mem" src="./assets/img/WorkLife.jpg">
-                    </div>
-                    <img class="plus">
-                    <img class="xmark">
-                </div>
-                <div class="mems-item">
-                    <div class="item-top">
-                        <input type="radio" name="radio-btn" id="subtitle" class="item-top">
-                        <label class="subtitle" for="subtitle">You can`t just copy and paste</label>
-                        <img class="img-mem" src="./assets/img/CopyPaste.jpg">
-                    </div>
-                    <img class="plus">
-                    <img class="xmark">
                 </div>
             </div>
         </div>
